--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi==0.87.0
-matplotlib==3.5.1
-numpy==1.13.3
-scipy==1.8.0
+fastapi==0.110.*
+matplotlib==3.8.3
+numpy==1.26.*
+scipy==1.12.*
+uvicorn[standard]==0.27.*
